# wust_arm_planner

./: .gitignore
src/detector/: CMakeLists.txt  package.xml
src/detector/config/: exchange_slot_detector.yaml
src/detector/include/detector/: detector.hpp  detector_node.hpp
src/detector/launch/: detector.launch.py
src/detector/src/: detector.cpp  detector_main.cpp  detector_node.cpp  detector_node_main.cpp
src/hik_camera/: CMakeLists.txt  package.xml
src/hik_camera/config/: camera_params.yaml
src/hik_camera/include/hik_camera/: hik_camera_node.hpp
src/hik_camera/launch/: hik_camera.launch.py
src/hik_camera/src/: hik_camera_node.cpp
src/mtc_place/: CMakeLists.txt  package.xml
src/mtc_place/config/: kinematics_demo.yaml
src/mtc_place/launch/: mtc_sim.launch.py
src/mtc_place/src/: mtc_place_node.cpp
src/panda_pick_and_place/: CMakeLists.txt  package.xml
src/panda_pick_and_place/launch/: wust_arm_7axis_demo.launch.py
src/panda_pick_and_place/src/: pick_and_place_node.cpp
src/wust_arm_7axis_description/: CMakeLists.txt  package.xml
src/wust_arm_7axis_description/launch/: display.launch.py
src/wust_arm_7axis_description/urdf/: wust_arm_7axis.csv  wust_arm_7axis.urdf
src/wust_arm_7axis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/wust_arm_7axis_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  wust_arm_7axis_description.ros2_control.xacro  wust_arm_7axis_description.srdf  wust_arm_7axis_description.urdf.xacro
src/wust_arm_7axis_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/wust_arm_bringup/: CMakeLists.txt  package.xml
src/wust_arm_bringup/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/wust_arm_bringup/launch/: common.py  fake_no_hardware.launch.py  only_vision_bringup.launch.py  ros2_no_hardware.launch.py
src/wust_arm_driver/: CMakeLists.txt  package.xml
src/wust_arm_driver/config/: serial_driver.yaml
src/wust_arm_driver/include/wust_arm_driver/: packet.hpp  wust_arm_driver.hpp
src/wust_arm_driver/launch/: wust_arm_driver.launch.py
src/wust_arm_driver/src/: crc.cpp  wust_arm_driver.cpp
