<?xml version="1.0"?>
<package format="3">
  <name>detector</name>
  <version>1.0.0</version>
  <description>Exchange slot detector node with yaml-cpp debug support</description>
  <maintainer email="auauau@wust.edu.cn">auauau</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>OpenCV</depend>
  <depend>yaml-cpp</depend> <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>