<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wust_arm_driver</name>
  <version>0.1.0</version>
  <description>MoveIt 2 Serial Driver for WUST Arm</description>
  <maintainer email="auauau@hp.com">auauau</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>serial_driver</depend>
  <depend>io_context</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>